--- a/alphabot/package.json
+++ b/alphabot/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^4"
   }
 }
